client/css/custom.less
/* ... */
.fn-gantt-hint {
	border: 5px solid #edc332;
	background-color: #fff5d4;
	padding: 10px;
	position: absolute;
	display: none;
	z-index: 11;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
.fn-gantt-loader {
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bf000000',endColorstr='#bf000000',GradientType=0 );
	background: rgba(0,0,0,0.75);
	cursor: wait;
	z-index: 30;
}
.fn-gantt-loader-spinner span {
	position: absolute;
	margin: auto;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	width: 100%;
	text-align: center;
	height: 1em;
	line-height: 1em;
	color: #fff;
	font-size: 1em;
	font-weight: bold;
}
.dl-horizontal{
	dt{
	    text-align: left;
		width: 130px;
	}
	dd{
		margin-left: 120px;
	}
}
.language-dropdown {
	.dropdown-menu {
		right: 100%;
		left: auto;
	}
	&.dropdown-submenu > a::after {
		display: none;
	}
}
.edit-comment{
		.media, .media-body {
			overflow:visible !important;
			display: inline-block;
		}
	}
.user-filter { 
	.nav > li > a {
		padding:2px 6px;
		i{
			padding-right:0;
		}
	}
}
.text-wrap {
	word-wrap: break-word;
}
.border-top {
	border-top: 1px solid #dedede;
}
.dropdown-menu-top {	
    top: 29px;
    left: -3px;
}
.no-mar{
	margin: 0px;
}
.activities-list { 
	p {
		margin: 0px;
	}
}
.label-past{
	background-color: #da0000;
}
.label-future{
	background-color: #27c5c3;
}
.label-present{
	background-color: #f3c60e;
}

